[gd_scene load_steps=4 format=2]

[ext_resource path="res://font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://MaiinMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="MaiinMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 184.0
margin_top = 194.0
margin_right = 840.0
margin_bottom = 405.0
grow_horizontal = 0
custom_constants/separation = 25

[node name="NewSinglePlayerGame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 656.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Одиночная игра"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewPVP" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 59.0
margin_right = 656.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 1 )
text = "Два игрока по локальной сети"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 656.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 1 )
text = "Опции"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 177.0
margin_right = 656.0
margin_bottom = 211.0
custom_fonts/font = SubResource( 1 )
text = "Выход"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="CenterContainer/VBoxContainer/NewSinglePlayerGame" to="." method="_on_NewSinglePlayerGame_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/NewPVP" to="." method="_on_NewPVP_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Options" to="." method="_on_Options_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_button_down"]
